--- a/CSS/Galleri.css
+++ b/CSS/Galleri.css
@@ -263,7 +263,7 @@ p{
 @media (max-width: 1024px) {
     html {
         background: none;
-        background-color: #1a1a1a;
+        background-color: #222222;
         background-attachment: scroll;
     }
 
@@ -314,7 +314,7 @@ p{
 @media (max-width: 768px) {
     html {
         background: none;
-        background-color: #1a1a1a;
+        background-color: #222222;
         background-attachment: scroll;
     }
 
