--- a/CSS/Kontakt.css
+++ b/CSS/Kontakt.css
@@ -226,7 +226,7 @@ p{
 @media (max-width: 1024px) {
     html {
         background: none;
-        background-color: #1a1a1a;
+        background-color: #222222;
         background-attachment: scroll;
     }
 
@@ -277,7 +277,7 @@ p{
 @media (max-width: 768px) {
     html {
         background: none;
-        background-color: #1a1a1a;
+        background-color: #222222;
         background-attachment: scroll;
     }
 
