--- a/CSS/Om.css
+++ b/CSS/Om.css
@@ -226,7 +226,7 @@ p{
 @media (max-width: 1024px) {
     html {
         background: none;
-        background-color: #1a1a1a;
+        background-color: #222222;
         background-attachment: scroll;
     }
 
@@ -325,7 +325,7 @@ p{
 @media (max-width: 768px) {
     html {
         background: none;
-        background-color: #1a1a1a;
+        background-color: #222222;
         background-attachment: scroll;
     }
 
