--- a/CSS/Prisliste.css
+++ b/CSS/Prisliste.css
@@ -213,7 +213,7 @@ p{
 @media (max-width: 1024px) {
     html {
         background: none;
-        background-color: #1a1a1a;
+        background-color: #222222;
         background-attachment: scroll;
     }
 
@@ -264,7 +264,7 @@ p{
 @media (max-width: 768px) {
     html {
         background: none;
-        background-color: #1a1a1a;
+        background-color: #222222;
         background-attachment: scroll;
     }
 
